--- a/Makefile.tinydtls
+++ b/Makefile.tinydtls
@@ -20,14 +20,14 @@ ifeq ($(TARGET), minimal-net)
 CFLAGS += -DSHA2_USE_INTTYPES_H=1
 endif
 
-CFLAGS += -DDTLSv12 -DWITH_SHA256 
-tinydtls_src = dtls.c crypto.c hmac.c rijndael.c sha2.c ccm.c netq.c ecc.c dtls_time.c peer.c session.c
+CFLAGS += -DDTLSv12 -DWITH_SHA256 -DWITH_DTLS=1
+tinydtls_src = dtls.c crypto.c hmac.c rijndael.c sha2.c ccm.c netq.c dtls_time.c peer.c session.c
 
 # This adds support for TLS_PSK_WITH_AES_128_CCM_8
-CFLAGS += -DDTLS_PSK
+CFLAGS += -DDTLS_PSK=1
 
 # This adds support for TLS_ECDHE_ECDSA_WITH_AES_128_CCM_8
-CFLAGS += -DDTLS_ECC
+CFLAGS += -DDTLS_ECC=1
 tinydtls_src += ecc.c
 
 # This activates debugging support
