--- a/.gitignore
+++ b/.gitignore
@@ -18,47 +18,14 @@ tests/ccm-test
 tests/dtls-client
 tests/dtls-server
 tests/prf-test
-tinydtls-0.6.0
-./tinydtls-0.6.0/
 TAGS
 *.patch
-.gitignore
 ecc/testecc
 ecc/testfield
 *.d
 *.hex
 *.elf
 *.map
-obj_*
-tinydtls.h
-dtls_config.h
-*.apple2enh
-*.atarixl
-*.avr-atmega128rfa1
-*.avr-raven
-*.avr-ravenlcd
-*.avr-ravenusb
-*.avr-rcb
-*.avr-zigbit
-*.c128
-*.c64
-*.cc2530dk
-*.cc2538dk
-*.cooja
-*.econotag
-*.eval-adf7xxxmb4z
-*.exp5438
-*.iris
-*.mbxxx
-*.micaz
-*.minimal-net
-*.native
-*.seedeye
-*.sensinode
-*.sky
-*.stm32test
-*.win32
-*.wismote
-*.z1
-*.z1sp
+tinydtls.h.in
+dtls_config.h.in
 .project
